[package]
name = "tyl-{module-name}"
version = "0.1.0"
edition = "2021"
authors = ["TYL Framework Team"]
license = "AGPL-3.0"
repository = "https://github.com/the-yaml-life/tyl-{module-name}"
description = "{Replace with module description}"
homepage = "https://github.com/the-yaml-life/tyl-{module-name}"
documentation = "https://docs.rs/tyl-{module-name}"
readme = "README.md"
keywords = ["{module-keywords}", "hexagonal-architecture", "rust", "tyl-framework"]
categories = ["development-tools", "rust-patterns"]

[dependencies]
# Common TYL dependencies - adjust as needed
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }

# Add module-specific dependencies here

[dev-dependencies]
# Development dependencies for testing