[package]
name = "tyl-tracing"
version = "0.1.0"
edition = "2021"
authors = ["TYL Framework Team"]
license = "AGPL-3.0"
repository = "https://github.com/the-yaml-life/tyl-tracing"
description = "Distributed tracing library for TYL framework with OpenTelemetry support and hexagonal architecture"
homepage = "https://github.com/the-yaml-life/tyl-tracing"
documentation = "https://docs.rs/tyl-tracing"
readme = "README.md"
keywords = ["tracing", "observability", "opentelemetry", "hexagonal-architecture", "tyl-framework"]
categories = ["development-tools", "rust-patterns"]

[dependencies]
# TYL Framework dependencies
tyl-errors = { git = "https://github.com/the-yaml-life/tyl-errors" }
tyl-config = { git = "https://github.com/the-yaml-life/tyl-config" }

# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }

# Tracing-specific dependencies
tracing = "0.1"
tracing-subscriber = "0.3"
opentelemetry = { version = "0.25", optional = true }
opentelemetry-otlp = { version = "0.25", optional = true }
tokio = { version = "1.0", features = ["time"], optional = true }

[dev-dependencies]
# Development dependencies for testing
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }

[features]
default = []
otel = ["opentelemetry", "opentelemetry-otlp", "tokio"]
async = ["tokio"]

# This package is part of the main TYL workspace
# No [workspace] section needed